<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="chat_with_help">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_email" translatable="false">musicdeity@yandex.ru</string>
    <string name="share_app_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_title">Поделиться в</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_hint"><font size="16">Поиск</font></string>
    <string name="track_name">Название трека</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="preview_not_found">Превью трека не найдено.\nВыберите другой трек</string>
    <string name="mail_client_not_found">Почтовый клиент не найден</string>
    <string name="timer_after_reset">00:00</string>
    <string name="timer_reset">00:00</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="there_is_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="create_playlist_finish">Завершить создание плейлиста?</string>
    <string name="unsaved_changes">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_in">Трек уже добавлен в плейлист %s</string>
    <string name="track_is_added">Добавлено в плейлист %s</string>
    <string name="playlist_is_created">Плейлист %s создан</string>
    <string name="delete_track">Удалить трек</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="share">Поделиться</string>
    <string name="add_tracks">Добавить треки</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialogue">Хотите удалить плейлист %s?</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_track_are_you_sure">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="delete_playlist_are_you_sure">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="there_is_no_tracks">В этом плейлисте пока нет треков</string>

    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>

</resources>