<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/MenuDayNightColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_marginBottom="@dimen/margin_24"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_22" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/MenuListStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/dark_theme" />

    <TextView
        android:id="@+id/share_app"
        style="@style/MenuListStyle"
        android:layout_marginEnd="@dimen/margin_5"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/support"
        style="@style/MenuListStyle"
        android:layout_marginEnd="@dimen/margin_5"
        android:text="@string/chat_with_help"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/user_agreement"
        style="@style/MenuListStyle"
        android:layout_marginEnd="@dimen/margin_7"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrowforward" />

</LinearLayout>