<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Theme.PlaylistMaker"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView style="@style/MenuDayNightColor"
            android:id="@+id/arrow_back"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/medium_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowback"
            />

        <TextView style="@style/MenuDayNightColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:padding="@dimen/medium_padding"
            android:text="@string/search"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/primary_text_size" />
    </FrameLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:orientation="horizontal"
        android:background="@drawable/edt_background"
        android:paddingLeft="@dimen/margin_8"
        tools:context=".MainActivity">

        <EditText style="@style/SearchDayNightColor"
            android:id="@+id/inputSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/margin_8"
            android:backgroundTint="@android:color/transparent"
            android:maxLength="32"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/clear_cross"
            android:padding="@dimen/medium_padding"
            android:visibility="gone" />
    </LinearLayout>



    <FrameLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            style="@style/MenuDayNightColor"
            android:id="@+id/search_history_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_history"
            android:textStyle="bold"
            android:fontFamily="@font/ys_display"
            android:textSize="@dimen/text_19"
            android:visibility="gone"
            />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrackList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/search_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView android:id="@+id/search_placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:src="@drawable/nothing_found"
            android:textColor="@color/black"
            />
        <TextView
            style ="@style/MenuDayNightColor"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:id="@+id/search_placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/nothing_found"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display"
            android:textStyle="bold"
            android:textSize="@dimen/holder_text_size"/>

        <Button style="@style/UpdateButtonStyle"
            android:id="@+id/search_button"
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

        <Button
            android:id="@+id/clear_history"
            style="@style/UpdateButtonStyle"
            android:text="@string/clear_history"
            android:visibility="gone"
            />

    </FrameLayout>



</LinearLayout>