<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_gravity="start"
        android:padding="@dimen/medium_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/search"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/ys_display"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/library"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/library"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/ys_display"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/ys_display"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />
</LinearLayout>