<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/MenuDayNightColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_14"
        android:text="@string/search"
        android:textSize="@dimen/text_size_22" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:background="@drawable/edt_background"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_8"
        tools:context=".main.ui.MainActivity">

        <EditText
            android:id="@+id/inputSearch"
            style="@style/SearchDayNightColor"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_36"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/margin_8"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/input_hint"
            android:inputType="text"
            android:maxLength="32"
            android:maxLines="1"
            android:paddingVertical="@dimen/size_1"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/medium_padding"
            android:src="@drawable/clear_cross"
            android:visibility="gone" />
    </LinearLayout>


  <!--  <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">-->

        <LinearLayout
            android:id="@+id/track_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_history_text"
                style="@style/MenuDayNightColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center"
                android:text="@string/search_history"
                android:textSize="@dimen/text_19"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/clear_history"
                style="@style/UpdateButtonStyle"
                android:text="@string/clear_history"
                android:visibility="gone" />

        </LinearLayout>
<!--
    </androidx.core.widget.NestedScrollView>
-->

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="36dp"
        android:layout_height="@dimen/progressbar_size"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/size_200"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/search_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="@dimen/margin_114"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/search_placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/nothing_found"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/search_placeholder_text"
            style="@style/MenuDayNightColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/nothing_found"
            android:textAlignment="center"
            android:textSize="@dimen/holder_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/search_button"
            style="@style/UpdateButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>


</LinearLayout>
