<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
        android:id="@+id/arrow_back"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrowback"
        android:foreground="?attr/selectableItemBackground"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:padding="@dimen/medium_padding"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/primary_text_size" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        >

    <Switch
        android:id="@+id/simpleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:padding="12dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:padding="@dimen/medium_padding"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/another_text_size"
        android:layout_marginStart="@dimen/margin_start"
        />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        android:id="@+id/share"
        android:foreground="?attr/selectableItemBackground"


        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:padding="@dimen/medium_padding"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/another_text_size"
        android:layout_marginStart="@dimen/margin_start"
        />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:src="@drawable/share"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|center_vertical"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        android:foreground="?attr/selectableItemBackground"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:padding="@dimen/medium_padding"
        android:text="@string/chat_with_help"
        android:textColor="@color/black"
        android:textSize="@dimen/another_text_size"
        android:layout_marginStart="@dimen/margin_start"
        />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:src="@drawable/support"
            android:layout_marginEnd="14dp"
            android:layout_gravity="end|center_vertical"

            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/string_height"
        android:foreground="?attr/selectableItemBackground"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:padding="@dimen/medium_padding"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/another_text_size"
        android:layout_marginStart="@dimen/margin_start"
        />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:src="@drawable/arrowforward"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end|center_vertical"

            />
    </FrameLayout>





</LinearLayout>