<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".library.ui.activity.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView style="@style/MenuDayNightColor"
        android:id="@+id/arrow_back"
        android:padding="@dimen/padding_20"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrowback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="?attr/selectableItemBackground"/>
    <TextView
        style="@style/MenuDayNightColor"
        android:id="@+id/new_playlist_title"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:layout_marginHorizontal="@dimen/margin_4"
        app:layout_constraintStart_toEndOf="@id/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/arrow_back"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/shape_rectangle_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_42"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginHorizontal="@dimen/margin_8"
        app:cardCornerRadius="@dimen/size_8"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_title"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder">

    <ImageView
        android:id="@+id/shape_rectangle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_square"
        android:src="@drawable/new_playlist_placeholder"
        android:scaleType="centerCrop"
        />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_56"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/shape_rectangle_container"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:hint="@string/title"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/text_size_16"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_18"
        android:paddingBottom="@dimen/padding_19"
        android:background="@drawable/rounded_rectangle"
        />

    <TextView
        android:id="@+id/title_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/text_size_12"
        android:textColor="@color/blue"
        android:layout_marginStart="@dimen/margin_16"
        android:padding="@dimen/padding_4"
        app:layout_constraintTop_toTopOf="@id/title_edit_text"
        app:layout_constraintBottom_toTopOf="@id/title_edit_text"
        app:layout_constraintStart_toStartOf="@id/title_edit_text"
        android:background="@color/white"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_56"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/title_edit_text"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:hint="@string/description"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/text_size_16"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_18"
        android:paddingBottom="@dimen/padding_19"
        android:background="@drawable/rounded_rectangle"
        />
    <TextView
        android:id="@+id/description_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/text_size_12"
        android:textColor="@color/blue"
        android:layout_marginStart="@dimen/margin_16"
        android:padding="@dimen/padding_4"
        app:layout_constraintTop_toTopOf="@id/description_edit_text"
        app:layout_constraintBottom_toTopOf="@id/description_edit_text"
        app:layout_constraintStart_toStartOf="@id/description_edit_text"
        android:background="@color/white"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_44"
        android:layout_marginHorizontal="@dimen/margin_1"
        android:layout_marginBottom="@dimen/margin_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:text="@string/create"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:background="@drawable/button_rectangle_selector"
        android:enabled="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>